# LibTorch_Tutorial

./: .gitignore  LICENSE  README.md
FC-MNIST/: CMakeLists.txt  run.sh
FC-MNIST/python-src/: main.py
FC-MNIST/src/: FCnet.cpp  FCnet.h  main.cpp
resnet-hymenoptera/: CMakeLists.txt  run.sh
resnet-hymenoptera/python-src/: loadData.py  main.py  residual_block.py  resnet.py
resnet-hymenoptera/src/: loadData.cpp  loadData.h  main.cpp  residual_block.cpp  residual_block.h  resnet.cpp  resnet.h
